doctorapp/force-app/main/default/objects/Product__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <description>Barcode/UPC.</description>
    <externalId>true</externalId>
    <label>Barcode</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>