doctorapp/force-app/main/default/objects/Product__c/fields/Min_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Min_Stock_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Low stock threshold.</description>
    <label>Min Stock Level</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>