doctorapp/force-app/main/default/objects/Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Stock Keeping Unit. 5-20 alphanumeric characters.</description>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>