doctorapp/force-app/main/default/objects/Product__c/validationRules/Non_Negative_Amounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Amounts</fullName>
    <active>true</active>
    <description>Price, cost, stock and reorder threshold cannot be negative.</description>
    <errorConditionFormula>Price__c &lt; 0 || Cost__c &lt; 0 || Stock_Quantity__c &lt; 0 || Min_Stock_Level__c &lt; 0</errorConditionFormula>
    <errorMessage>Price, Cost, Stock Quantity and Min Stock Level cannot be negative.</errorMessage>
</ValidationRule>