doctorapp/force-app/main/default/objects/Product__c/validationRules/SKU_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>SKU_Format</fullName>
    <active>true</active>
    <description>SKU must be 5-20 alphanumeric characters.</description>
    <errorConditionFormula>NOT(REGEX(SKU__c, &quot;^[a-zA-Z0-9]{5,20}$&quot;))</errorConditionFormula>
    <errorMessage>SKU must be 5 to 20 alphanumeric characters (letters and digits only).</errorMessage>
    <errorDisplayField>SKU__c</errorDisplayField>
</ValidationRule>